# rust-ffi-checker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/c-in-rust-doublefree/: Cargo.toml
examples/c-in-rust-doublefree/src/: main.rs
examples/c-in-rust-memleak/: Cargo.toml  build.rs
examples/c-in-rust-memleak/src/: c_struct.c  main.rs
examples/c-in-rust-uaf/: Cargo.toml
examples/cstring-test/: Cargo.toml  build.rs
examples/cstring-test/src/: main.rs
examples/ffi-simplest/: Cargo.toml
examples/ffi-simplest/src/: main.rs
examples/function-pointer-test/: Cargo.toml
examples/function-pointer-test/src/: main.rs
examples/mix-box-free/: Cargo.toml
examples/mix-box-free/src/: main.rs
examples/mix-mem-allocator/: Cargo.toml
examples/mix-mem-allocator/src/: main.rs
examples/rc-test/: Cargo.toml
examples/rc-test/src/: c_function.c  main.rs
examples/return-value-test/: Cargo.toml
examples/return-value-test/src/: main.rs
examples/rust-in-c-uaf/: Makefile
examples/rust-uaf-df/: Cargo.toml
examples/side-effects-test/: Cargo.toml
examples/string-test/: Cargo.toml
examples/vec-test/: Cargo.toml
scripts/classification/: classify.py
scripts/crawler/: crawler.py  crawler_deps.py  crawler_ffi_deps.py
scripts/evaluation/: crates_all.txt  evaluate.py
scripts/statistics/: ffi_percentage.py
src/: lib.rs  utils.rs
src/analysis/: abstract_domain.rs  block_visitor.rs  context.rs  diagnosis.rs  known_names.rs  option.rs  summary.rs  taint_analysis.rs
src/entry_collection/: callback.rs
trophy-case/: README.md
(+7 files in other folders)
